# wasmcon2023-kvcounter

./: Cargo.toml  Justfile  wasi_snapshot_preview1.latest-wasm32-wasi.wasm  wasi_snapshot_preview1.wasm  wasi_snapshot_preview1.wasmtime-12-0-0.wasm  wasi_snapshot_preview1.wasmtime-6d643e.wasm  wasi_snapshot_preview1.wasmtime-92024ad11.wasm  wasmcloud.toml
src/: lib.rs  ui.rs
wit/: deps.toml
