[package]
name = "wasmcon2023-keyvalue"
version = "0.1.0"
edition = "2021"
description = """
Wasmcon2023 WASI Keyvalue demo
"""

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wit-bindgen = "0.9.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "a15cb9dbee4f619b286fc22879a94f7197d55b18" }
